--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-    <div class="p-10">
+    <div class="p-10 ">
       <div class="container-about-us">
         <h1 class="mb-4 font-bold text-2xl text-center">Tentang Kami</h1>
         <h1 class="text-lg"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang berfokus
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <div class="p-10">
+    <div class="p-10 bg-gradient-to-r from-blue-600 to-violet-600">
       <h1 class="text-2xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
       <h1 class="text-lg text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
       <a href="#" class="rounded-3xl">
