--- a/index.html
+++ b/index.html
@@ -95,18 +95,25 @@
       </div>
     </div>
 
-    <div class="p-10 ">
-      <div class="container-about-us">
+    <div class="p-10 bg-gradient-to-r from-blue-600 to-violet-600">
+      <div class="container-about-us text-white">
         <h1 class="mb-4 font-bold text-2xl text-center">Tentang Kami</h1>
-        <h1 class="text-lg"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang berfokus
+        <h1 class="text-lg mb-8"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang berfokus
           pada layanan desain
           grafis
           profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
+          <h1 class="mb-4 font-bold text-2xl text-center">Galeri</h1>
+          <div class="grid grid-cols-2 gap-3">
+            <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
+            <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
+            <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
+            <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
+          </div>
       </div>
     </div>
 
-    <div class="p-10 bg-gradient-to-r from-blue-600 to-violet-600">
+    <div class="p-10">
       <h1 class="text-2xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
       <h1 class="text-lg text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
       <a href="#" class="rounded-3xl">
