--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- PRODUCT 1 -->
         <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8">
-          <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-xl text-center text-white">
+          <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
           <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
@@ -49,7 +49,7 @@
 
         <!-- PRODUCT 1 -->
         <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8">
-          <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-xl text-center text-white">
+          <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
           <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
@@ -69,7 +69,7 @@
 
         <!-- PRODUCT 1 -->
         <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8">
-          <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-xl text-center text-white">
+          <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
           <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
