--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
-          <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
+          <div class="container-detail-product p-8 text-lg font-medium rounded-b-lg">
             <h1 class="font-bold mb-3 text-xl">Detail :</h1>
             <h1 class="flex"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain 3
               Konsep Awal</h1>
@@ -114,36 +114,36 @@
     </div>
 
     <div class="p-10">
-      <h1 class="text-2xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
-      <h1 class="text-lg text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
+      <h1 class="text-3xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
+      <h1 class="text-base text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
       <a href="#" class="rounded-3xl">
-        <div class="container-telp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-lg"><img
+        <div class="container-telp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
             src="assets/icon/phone-call.png" alt="Phone Call" class="w-5 h-5"> (+62) 812-3456-7890</div>
       </a>
       <a href="#" class="rounded-3xl">
-        <div class="container-email border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-lg"><img
+        <div class="container-email border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
             src="assets/icon/mail.png" alt="Phone Call" class="w-5 h-5"> hello@savanadigital.id</div>
       </a>
       <a href="#">
-        <div class="container-whatsapp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-lg"><img
+        <div class="container-whatsapp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
             src="assets/icon/whatsapp (1).png" alt="Phone Call" class="w-5 h-5"> 0812-3456-7890</div>
       </a>
       <a href="#">
-        <div class="container-address border-2 rounded-3xl p-4 flex gap-2 items-center text-lg mb-10"><img
+        <div class="container-address border-2 rounded-3xl p-4 flex gap-2 items-center text-base mb-10"><img
             src="assets/icon/location.png" alt="Phone Call" class="w-5 h-5"> Jl. Cendana No. 45, Bandung, Jawa Barat
           40115</div>
       </a>
-      <h1 class="text-2xl font-bold text-center mb-4">Sosial Media</h1>
+      <h1 class="text-3xl font-bold text-center mb-4">Sosial Media</h1>
       <a href="#" class="w-full">
-        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-xl"><img src="assets/icon/instagram.png"
+        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/instagram.png"
             alt="Instagram" class="w-6 h-6">@savanadigital</div>
       </a>
       <a href="#" class="w-full">
-        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-xl"><img src="assets/icon/tik-tok.png"
+        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/tik-tok.png"
             alt="Tiktok" class="w-6 h-6">@savanadigital</div>
       </a>
       <a href="#" class="w-full">
-        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-xl"><img src="assets/icon/twitter.png"
+        <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/twitter.png"
             alt="Twitter" class="w-6 h-6">@savanadigital</div>
       </a>
     </div>
