--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       class="h-screen w-full flex items-center justify-center bg-gradient-to-r from-blue-600 to-violet-600 text-white">
       <div class="container-banner text-center">
         <h1 class="text-2xl mb-4 font-bold">Savana Digital Studio</h1>
-        <h2 class="text-xl font-semibold">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
+        <h2 class="text-xl font-medium">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       </div>
     </div>
 
     <div class="p-10">
-      <h1 class="text-center font-bold text-2xl mb-10">Layanan Kami</h1>
+      <h1 class="text-center font-bold text-3xl mb-10">Layanan Kami</h1>
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
@@ -97,13 +97,13 @@
 
     <div class="p-10 bg-gradient-to-r from-blue-600 to-violet-600">
       <div class="container-about-us text-white">
-        <h1 class="mb-4 font-bold text-2xl text-center">Tentang Kami</h1>
+        <h1 class="mb-4 font-bold text-3xl text-center">Tentang Kami</h1>
         <h1 class="text-lg mb-8"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang berfokus
           pada layanan desain
           grafis
           profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
-          <h1 class="mb-4 font-bold text-2xl text-center">Galeri</h1>
+          <h1 class="mb-4 font-bold text-3xl text-center">Galeri</h1>
           <div class="grid grid-cols-2 gap-3">
             <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
             <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
