--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
+<body class="scroll-smooth">
   <div class="container-body">
     <div
       class="h-screen w-full flex items-center justify-center bg-gradient-to-r from-blue-600 to-violet-600 text-white">
