--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="style/animation.css">
 </head>
 
 <body class="scroll-smooth">
@@ -23,7 +24,7 @@
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8">
+        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8 appear-bottom-to-top">
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
@@ -48,7 +49,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8">
+        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8 appear-bottom-to-top">
           <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
@@ -68,7 +69,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8">
+        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8 appear-bottom-to-top">
           <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
@@ -97,14 +98,14 @@
 
     <div class="px-10 py-14 bg-gradient-to-r from-blue-600 to-violet-600">
       <div class="container-about-us text-white">
-        <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
-        <h1 class="text-lg mb-8"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang
+        <h1 class="mb-8 font-bold text-3xl text-center appear-right-to-left">Tentang Kami</h1>
+        <h1 class="text-lg mb-8 appear-right-to-left"><span class="font-bold">Savana Digital Studio</span> adalah perusahaan kreatif yang
           berfokus
           pada layanan desain
           grafis
           profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
-        <div class="grid grid-cols-2 gap-3">
+        <div class="grid grid-cols-2 gap-3 appear-right-to-left">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
@@ -116,7 +117,7 @@
     <div class="p-10">
       <h1 class="text-3xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
       <h1 class="text-base text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
-      <a href="#" class="rounded-3xl">
+      <a href="#" class="rounded-3xl appear-left-to-right">
         <div class="container-telp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
             src="assets/icon/phone-call.png" alt="Phone Call" class="w-5 h-5"> (+62) 812-3456-7890</div>
       </a>
