--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="p-10">
-      <h1 class="text-center font-bold text-3xl mb-10 appear-bottom-to-top">Layanan Kami</h1>
+      <h1 class="text-center font-bold text-3xl mb-10">Layanan Kami</h1>
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
