--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <link rel="stylesheet" href="style/animation.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="scroll-smooth">
@@ -20,11 +20,11 @@
     </div>
 
     <div class="p-10">
-      <h1 class="text-center font-bold text-3xl mb-10">Layanan Kami</h1>
+      <h1 class="text-center font-bold text-3xl mb-10 ">Layanan Kami</h1>
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8 appear-bottom-to-top">
+        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up">
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
@@ -49,7 +49,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8 appear-bottom-to-top">
+        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up">
           <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
@@ -69,7 +69,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8 appear-bottom-to-top">
+        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up">
           <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
@@ -178,6 +178,14 @@
 
   </div>
 
+
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: true, // animasi hanya terjadi sekali
+    });
+  </script>
 
 </body>
 
