--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up">
+        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up" data-aos-offset="100">
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
@@ -49,7 +49,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up">
+        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up" data-aos-offset="100">
           <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
@@ -69,7 +69,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up">
+        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up" data-aos-offset="100">
           <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
@@ -183,7 +183,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
-      once: true, // animasi hanya terjadi sekali
+      //once: true, // animasi hanya terjadi sekali
     });
   </script>
 
