--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </div>
 
     <div class="p-10">
-      <h1 class="text-center font-bold text-3xl mb-10 ">Layanan Kami</h1>
+      <h1 class="text-center font-bold text-3xl mb-10">Layanan Kami</h1>
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up" data-aos-offset="100">
+        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up" data-aos-offset="50">
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
@@ -49,7 +49,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up" data-aos-offset="100">
+        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up" data-aos-offset="50">
           <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
@@ -69,7 +69,7 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up" data-aos-offset="100">
+        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up" data-aos-offset="50">
           <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
@@ -98,15 +98,15 @@
 
     <div class="px-10 py-14 bg-gradient-to-r from-blue-600 to-violet-600">
       <div class="container-about-us text-white">
-        <h1 class="mb-8 font-bold text-3xl text-center appear-left-to-right">Tentang Kami</h1>
-        <h1 class="text-lg mb-8 appear-left-to-right"><span class="font-bold">Savana Digital Studio</span> adalah
+        <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
+        <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="50"><span class="font-bold">Savana Digital Studio</span> adalah
           perusahaan kreatif yang
           berfokus
           pada layanan desain
           grafis
           profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
-        <div class="grid grid-cols-2 gap-3 appear-left-to-right">
+        <div class="grid grid-cols-2 gap-3" data-aos="fade-right" data-aos-offset="50">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
@@ -119,36 +119,36 @@
       <div class="appear-bottom-to-top">
         <h1 class="text-3xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
         <h1 class="text-base text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
-        <a href="#" class="rounded-3xl">
+        <a href="#" class="rounded-3xl" data-aos="fade-left" data-aos-offset="50">
           <div class="container-telp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
               src="assets/icon/phone-call.png" alt="Phone Call" class="w-5 h-5"> (+62) 812-3456-7890</div>
         </a>
-        <a href="#" class="rounded-3xl">
+        <a href="#" class="rounded-3xl" data-aos="fade-right" data-aos-offset="50">
           <div class="container-email border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
               src="assets/icon/mail.png" alt="Phone Call" class="w-5 h-5"> hello@savanadigital.id</div>
         </a>
-        <a href="#" class="rounded-3xl">
+        <a href="#" class="rounded-3xl" data-aos="fade-left" data-aos-offset="50">
           <div class="container-whatsapp border-2 rounded-3xl p-4 mb-4 flex gap-2 items-center text-base"><img
               src="assets/icon/whatsapp (1).png" alt="Phone Call" class="w-5 h-5"> 0812-3456-7890</div>
         </a>
-        <a href="#" class="rounded-3xl">
+        <a href="#" class="rounded-3xl" data-aos="fade-right" data-aos-offset="50">
           <div class="container-address border-2 rounded-3xl p-4 flex gap-2 items-center text-base mb-10"><img
               src="assets/icon/location.png" alt="Phone Call" class="w-5 h-5"> Jl. Cendana No. 45, Bandung, Jawa Barat
             40115</div>
         </a>
       </div>
 
-      <div class="appear-bottom-to-top">
+      <div class="">
         <h1 class="text-3xl font-bold text-center mb-4">Sosial Media</h1>
-        <a href="#" class="w-full">
+        <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="50">
           <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/instagram.png"
               alt="Instagram" class="w-6 h-6">@savanadigital</div>
         </a>
-        <a href="#" class="w-full">
+        <a href="#" class="w-full" data-aos="fade-right" data-aos-offset="50">
           <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/tik-tok.png"
               alt="Tiktok" class="w-6 h-6">@savanadigital</div>
         </a>
-        <a href="#" class="w-full">
+        <a href="#" class="w-full" data-aos="fade-left" data-aos-offset="50">
           <div class="container-telp px-4 mb-4 flex gap-2 items-center text-base"><img src="assets/icon/twitter.png"
               alt="Twitter" class="w-6 h-6">@savanadigital</div>
         </a>
