tambah navbar dan animasi AOS

--- a/index.html
+++ b/index.html
@@ -7,24 +7,62 @@
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body class="scroll-smooth">
   <div class="container-body">
-    <div
-      class="h-screen w-full flex items-center justify-center bg-gradient-to-r from-blue-600 to-violet-600 text-white">
+
+    
+
+<nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
+    </a>
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li>
+          <a href="#home" class="block py-2 px-3 text-gray-900 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+        </li>
+        <li>
+          <a href="#layanin-kami" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Layanan</a>
+        </li>
+        <li>
+          <a href="#tentang-kami" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tentang Kami</a>
+        </li>
+        <li>
+          <a href="#kontak" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+    <div id="home"
+      class="h-screen w-full flex items-center justify-center !bg-gradient-to-r from-blue-600 to-violet-600 text-white">
       <div class="container-banner text-center">
         <h1 class="text-2xl mb-4 font-bold">Savana Digital Studio</h1>
         <h2 class="text-xl font-medium">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       </div>
     </div>
-
+    <br id="layanan-kami">
     <div class="p-10">
       <h1 class="text-center font-bold text-3xl mb-10">Layanan Kami</h1>
       <div class="container-product flex flex-col gap-y-14">
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up" data-aos-offset="50">
+        <div class="card-product bg-white rounded-xl border-2 border-blue-600 pb-8" data-aos="fade-up"
+          data-aos-offset="50">
           <div class="container-name-product bg-blue-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Logo</b></h1>
           </div>
@@ -49,7 +87,8 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up" data-aos-offset="50">
+        <div class="card-product bg-white rounded-xl border-2 border-fuchsia-400 pb-8" data-aos="fade-up"
+          data-aos-offset="50">
           <div class="container-name-product bg-fuchsia-400 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
@@ -69,7 +108,8 @@
         <!-- CLOSE PRODUCT 1 -->
 
         <!-- PRODUCT 1 -->
-        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up" data-aos-offset="50">
+        <div class="card-product bg-white rounded-xl border-2 border-purple-600 pb-8" data-aos="fade-up"
+          data-aos-offset="50">
           <div class="container-name-product bg-purple-600 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
@@ -95,11 +135,12 @@
 
       </div>
     </div>
-
-    <div class="px-10 py-14 bg-gradient-to-r from-blue-600 to-violet-600">
+    <br id="tentang-kami">
+    <div class="px-10 py-14 !bg-gradient-to-r from-blue-600 to-violet-600" >
       <div class="container-about-us text-white">
         <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
-        <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="50"><span class="font-bold">Savana Digital Studio</span> adalah
+        <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="50"><span class="font-bold">Savana Digital
+            Studio</span> adalah
           perusahaan kreatif yang
           berfokus
           pada layanan desain
@@ -115,7 +156,7 @@
       </div>
     </div>
 
-    <div class="p-10">
+    <div class="p-10" id="kontak">
       <div class="appear-bottom-to-top">
         <h1 class="text-3xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
         <h1 class="text-base text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
@@ -155,7 +196,7 @@
       </div>
     </div>
 
-    <div class="p-10 bg-gradient-to-r from-blue-600 to-violet-600 text-center">
+    <div class="p-10 !bg-gradient-to-r from-blue-600 to-violet-600 text-center">
       <h1 class="mb-1 text-lg font-bold text-white">SAVANA DIGITAL STUDIO</h1>
       <h2 class="mb-4 text-base font-semibold text-white">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       <div class="list-contact flex gap-3 justify-center mb-4">
@@ -181,6 +222,7 @@
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
   <script>
     AOS.init({
       //once: true, // animasi hanya terjadi sekali
