animasi di gambar

--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
           grafis
           profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
-        <div class="grid grid-cols-2 gap-3" data-aos="fade-right" data-aos-offset="25">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
-          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full">
+        <div class="grid grid-cols-2 gap-3">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
+          <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
         </div>
       </div>
     </div>
