--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <div id="home"
-      class="h-screen w-full flex items-center justify-center !bg-gradient-to-r from-blue-600 to-violet-600 text-white">
+      class="h-screen w-full flex items-center justify-center !bg-[url(/img/background.png)] text-white">
       <div class="container-banner text-center">
         <h1 class="text-2xl mb-4 font-bold">Savana Digital Studio</h1>
         <h2 class="text-xl font-medium">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
