--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+        <img src="img/logo.png" class="h-8" alt="Savana Logo" />
         <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
     </a>
     <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -136,7 +136,7 @@
       </div>
     </div>
     <br id="tentang-kami">
-    <div class="px-10 py-14 !bg-gradient-to-r from-blue-600 to-violet-600" >
+    <div class="px-10 py-14 !bg-gradient-to-r from-blue-950 to-violet-800" >
       <div class="container-about-us text-white">
         <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
         <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="25"><span class="font-bold">Savana Digital
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <div class="p-10 !bg-gradient-to-r from-blue-600 to-violet-600 text-center">
+    <div class="p-10 !bg-gradient-to-r from-blue-950 to-violet-800">
       <h1 class="mb-1 text-lg font-bold text-white">SAVANA DIGITAL STUDIO</h1>
       <h2 class="mb-4 text-base font-semibold text-white">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       <h1 class="text-base font-semibold text-white">© 2025 Trino Studio. All rights reserved.</h1>
