--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="img/logo.png" class="h-8" alt="Savana Logo" />
         <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
     </a>
@@ -49,7 +49,7 @@
 
 
     <div id="home"
-      class="h-screen w-full flex items-center justify-center !bg-[url(/img/background.png)] text-white">
+      class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white">
       <div class="container-banner text-center">
         <h1 class="text-2xl mb-4 font-bold">Savana Digital Studio</h1>
         <h2 class="text-xl font-medium">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
