text center footer

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <div class="p-10 !bg-gradient-to-r from-blue-950 to-violet-800">
+    <div class="p-10 !bg-gradient-to-r from-blue-950 to-violet-800 text-center">
       <h1 class="mb-1 text-lg font-bold text-white">SAVANA DIGITAL STUDIO</h1>
       <h2 class="mb-4 text-base font-semibold text-white">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       <h1 class="text-base font-semibold text-white">© 2025 Trino Studio. All rights reserved.</h1>
