--- a/index.html
+++ b/index.html
@@ -10,49 +10,62 @@
   <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
-<body class="scroll-smooth">
+<body style="scroll-behavior: smooth;">
   <div class="container-body">
 
-    
+    <nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <img src="img/logo.png" class="h-8" alt="Savana Logo" />
+          <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
+        </a>
+        <button data-collapse-toggle="navbar-default" type="button"
+          class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          aria-controls="navbar-default" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M1 1h15M1 7h15M1 13h15" />
+          </svg>
+        </button>
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+          <ul
+            class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+            <li>
+              <a href="#home"
+                class="block py-2 px-3 text-gray-900 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+                aria-current="page">Home</a>
+            </li>
+            <li>
+              <a href="#layanan-kami"
+                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Layanan</a>
+            </li>
+            <li>
+              <a href="#tentang-kami"
+                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tentang
+                Kami</a>
+            </li>
+            <li>
+              <a href="#kontak"
+                class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<nav class="bg-white border-b border-gray-950 dark:bg-gray-900 fixed z-20 top-0 start-0 w-full">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="img/logo.png" class="h-8" alt="Savana Logo" />
-        <span class="self-center text-lg font-semibold whitespace-nowrap dark:text-white">Savana Digital Studio</span>
-    </a>
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-        <li>
-          <a href="#home" class="block py-2 px-3 text-gray-900 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
-        </li>
-        <li>
-          <a href="#layanan-kami" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Layanan</a>
-        </li>
-        <li>
-          <a href="#tentang-kami" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tentang Kami</a>
-        </li>
-        <li>
-          <a href="#kontak" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Kontak</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 
-
-    <div id="home"
-      class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white">
+    <div id="home" class="h-screen w-full flex items-center justify-center !bg-[url(./img/background.png)] text-white">
       <div class="container-banner text-center">
-        <h1 class="text-2xl mb-4 font-bold">Savana Digital Studio</h1>
-        <h2 class="text-xl font-medium">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
+        <h1 class="text-2xl font-bold mb-6 pt-24">Desain Cerdas <br> Solusi Digital Berkualitas</h1>
+        <h2 class="text-base font-medium mx-12 mb-16">Gunakan Jasa Kami Untuk Mendapatkan Bermacam Desain Yang Keren
+          Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
+        <div class="flex justify-center">
+          <a href="#layanan-kami"
+            class="!bg-violet-700 border-white border font-medium text-base p-5 rounded-lg flex items-center gap-4 w-max">Lihat
+            Detail <img src="assets/icon/next.png" alt="Next Icon" class="w-5 invert brightness-0"></a>
+        </div>
       </div>
     </div>
     <br id="layanan-kami">
@@ -136,7 +149,7 @@
       </div>
     </div>
     <br id="tentang-kami">
-    <div class="px-10 py-14 !bg-gradient-to-r from-blue-950 to-violet-800" >
+    <div class="px-10 py-14 !bg-[url(./img/background.png)] bg-right">
       <div class="container-about-us text-white">
         <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
         <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="25"><span class="font-bold">Savana Digital
@@ -196,7 +209,7 @@
       </div>
     </div>
 
-    <div class="p-10 !bg-gradient-to-r from-blue-950 to-violet-800 text-center">
+    <div class="p-10 !bg-violet-900 text-center">
       <h1 class="mb-1 text-lg font-bold text-white">SAVANA DIGITAL STUDIO</h1>
       <h2 class="mb-4 text-base font-semibold text-white">Desain Cerdas <br> Solusi Digital Berkualitas</h2>
       <h1 class="text-base font-semibold text-white">© 2025 Trino Studio. All rights reserved.</h1>
