ubah fw product

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="container-name-product bg-fuchsia-800 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Sosial Media</b></h1>
           </div>
-          <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
+          <div class="container-detail-product p-8 text-lg font-medium rounded-b-lg">
             <h1 class="font-bold mb-3 text-xl">Detail :</h1>
             <h1 class="flex"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain feed Instagram</h1>
             <h1 class="flex"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain story</h1>
@@ -126,7 +126,7 @@
           <div class="container-name-product bg-purple-900 px-8 py-6 rounded-t-lg text-center text-white">
             <h1 class="text-2xl"><b>Desain Kemasan Produk</b></h1>
           </div>
-          <div class="container-detail-product p-8 text-lg font-semibold rounded-b-lg">
+          <div class="container-detail-product p-8 text-lg font-medium rounded-b-lg">
             <h1 class="font-bold mb-3 text-xl">Detail :</h1>
             <h1 class="flex"><img src="assets/icon/check.png" alt="Checklist" class="w-6 h-6">Desain kemasan semua jenis
               produk (Botol, Box, Stiker)</h1>
