--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           Untuk Usaha Anda Agar Customer Anda Tertarik</h2>
         <div class="flex justify-center">
           <a href="#layanan-kami"
-            class="!bg-violet-700 border-white border font-medium text-base p-5 rounded-lg flex items-center gap-4 w-max">Lihat
-            Detail <img src="assets/icon/next.png" alt="Next Icon" class="w-5 invert brightness-0"></a>
+            class="!bg-violet-700 border-white border font-medium text-base py-5 px-7 rounded-lg flex items-center gap-4 w-max">Lihat
+            Detail <img src="assets/icon/next.png" alt="Next Icon" class="w-5 invert brightness-0 animate-bounce"></a>
         </div>
       </div>
     </div>
