--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           berfokus
           pada layanan desain
           grafis
-          profesional, branding visual, dan pengembangan website untuk UMKM, startup, hingga perusahaan menengah. Kami
+          profesional dan branding visual untuk UMKM, startup, hingga perusahaan menengah. Kami
           membantu klien membangun identitas visual yang kuat dan kehadiran online yang efektif.</h1>
         <div class="grid grid-cols-2 gap-3">
           <img src="img/kantor-kecil.png" alt="Kantor" class="w-full" data-aos="fade-right" data-aos-offset="25">
