hampir fix mobile

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
     </div>
     <br id="tentang-kami">
-    <div class="px-10 py-14 !bg-[url(./img/background.png)] bg-right">
+    <div class="px-10 py-20 !bg-[url(./img/background.png)] bg-right">
       <div class="container-about-us text-white">
         <h1 class="mb-8 font-bold text-3xl text-center">Tentang Kami</h1>
         <h1 class="text-lg mb-8" data-aos="fade-right" data-aos-offset="25"><span class="font-bold">Savana Digital
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <div class="p-10" id="kontak">
+    <div class="px-10 py-20" id="kontak">
       <div class="appear-bottom-to-top">
         <h1 class="text-3xl font-bold text-center mb-4">Ada Pertanyaan?</h1>
         <h1 class="text-base text-center font-medium mb-4">Hubungi Kontak Admin Yang Tersedia Ada Di Bawah.</h1>
